Wrapped search results in a well. Added a scrolling css style for webkit (in hopes of fixing the scrolling issue on mobile devices).

--- a/src/zindler.web/Content/bootstrap.css
+++ b/src/zindler.web/Content/bootstrap.css
@@ -1022,6 +1022,7 @@ pre code {
 .pre-scrollable {
   max-height: 340px;
   overflow-y: scroll;
+  -webkit-overflow-scrolling: touch; 
 }
 
 form {
